<resources>
    <string name="app_name">Health App</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_onboarding_1">Welcome to Onboarding App !</string>
    <string name="description_onboarding_1">Here is an open-source project which shows sweet &amp; original onboarding ViewPagers that follows Material Design Guidelines</string>

    <string name="title_onboarding_2">Try AirBnB Lottie</string>
    <string name="description_onboarding_2">We use Lottie Animations on our Intro to make it interactive &amp; pleasant. Did you already tried it ? If no, let\'s start now. It\'s just awesome</string>

    <string name="title_onboarding_3">Code beautiful apps</string>
    <string name="description_onboarding_3">Our mission is to make useful &amp; subtle apps. We love help people to save time with open-source stuffs, but we also make life easier by creating new things. Good Coding!</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="finish">Finish</string>
    <string name="start">start</string>
    <string name="welcome_text">Hello,Welcome back to your account</string>
    <string name="login_account">Login Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="or_text">OR</string>
    <string name="createaccount"><font color="#333333"> Not registered yet ? </font><font color="#F44336"><b> create an account </b></font>
    </string>
    <string name="no_image">no image</string>
    <string name="current_countryCode">+91</string>
    <string name="search_country">Search</string>
    <string name="verficationcode">Verfication Code</string>
    <string name="otpsmptext">We have sent the code verification to Your Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="gotoregister"><font color="#333333">New To Login? </font><font color="#304FFE"><b>Register </b></font></string>
    <string name="welcomeback">Welcome back</string>
    <string name="password">Password</string>
    <string name="forgottxt">Dont\'t Worry ! It happens. please enter the new password to your account</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm  New Password</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="sign_regtxt"><font color="#333333"> Joined us before ?</font><font color="#304FFE"><b> Login </b></font></string>
    <string name="terms_agree"><font color="#333333">By Singing us, You\'re agree to our </font><font color="#304FFE"> Terms &amp; Conditions </font> <font color="#333333">and </font><font color="#304FFE"> Privacy Policy </font></string>
    <string name="passportnumber">Passport Number</string>
    <string name="firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birth Date</string>
    <string name="passport">Passport</string>
    <string name="national_id">National Id</string>
    <string name="id">Id Number</string>
    <string name="content">image</string>
    <string name="samplenum">+658859632584</string>
    <string name="editicon">editicon</string>
    <string name="Home">Home</string>
    <string name="hello">Hello</string>
    <string name="search_hint">Search a docter or health issue</string>
    <string name="appoinment_today">Appoinnment Today</string>
    <string name="see_all">See All</string>
    <string name="Top_docter">Top Docter</string>
    <string name="speciality">Speciality</string>
    <string name="account_create">Create an Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_a_doctor">Find A Doctor</string>
    <string name="search_for_a_speciality">Search for a speciality</string>
    <string name="verify">Verify</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


</resources>