<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.zeoner.healthapp.otp.viewmodel.OTPViewmodel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".otp.view.OTPActivity">

            <ImageView
                android:id="@+id/otpimage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/verficationcode"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/otpsmptext"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mobnum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/samplenum"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/editicon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_sharp_edit_24"
                    android:contentDescription="@string/editicon" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">



            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:inputType="number"
               android:padding="10dp"
                android:paddingStart="25dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cursorColor="@color/black"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
              android:itemBackground="@drawable/cardshadow_bg"
                app:itemHeight="40dp"
                app:itemRadius="20dp"
                app:itemSpacing="5dp"
                app:itemWidth="40dp"
                app:lineColor="@color/dark_blue"
                app:lineWidth="2dp" />
        </LinearLayout>
            <TextView
                android:id="@+id/resendotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/resent_otp"
                android:textColor="@color/md_red_A700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textSize="18dp"
                app:elevation="10dp"
                android:shadowColor="@color/light_grey"
                app:cornerRadius="20dp"
                />


        </LinearLayout>
    </ScrollView>
</layout>