<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.zeoner.healthapp.forgotpassword.viewmodel.ForgotViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".forgotpassword.view.ForgotPasswordActivity">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/backarrow"
            app:tint="@color/dark_blue" />


        <ImageView
            android:id="@+id/forgot_img"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgotpassword"
            android:textColor="@color/dark_blue"
            android:textSize="30dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/forgottxt"
            android:textColor="@color/dark_blue"
            android:textSize="18dp"
           />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/new_password"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            app:passwordToggleTint="@color/light_grey">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/box_bg"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:minWidth="350dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/dark_grey" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/confirm_password"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            app:passwordToggleTint="@color/light_grey">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/box_bg"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:minWidth="350dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/dark_grey" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:backgroundTint="@color/md_blue_grey_300"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="18dp"
            app:cornerRadius="20dp" />
    </LinearLayout>
</layout>