<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.zeoner.healthapp.createaccount.viewmodel.PersonalDetailViewModel" />


    </data>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".login.view.LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:src="@drawable/backarrow"
                app:tint="@color/dark_blue" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="start"
                android:text="@string/account_create"
                android:textColor="@color/dark_grey"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>




        <ImageView
            android:id="@+id/img_create"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_email"
            style="@style/edittext_outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/email"
            app:helperTextEnabled="true"
            app:passwordToggleTint="@color/light_grey"
            app:helperTextTextColor="@color/md_red_A700"
            app:hintTextColor="@color/md_indigo_500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etx_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/light_grey"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:textCursorDrawable="@drawable/bg_edittext_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_password"
            style="@style/edittext_outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:helperTextEnabled="true"
            app:passwordToggleTint="@color/light_grey"
            app:helperTextTextColor="@color/md_red_A700"
            app:hintTextColor="@color/md_indigo_500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etx_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/light_grey"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:textCursorDrawable="@drawable/bg_edittext_cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:backgroundTint="@color/md_blue_grey_300"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="18dp"
            app:cornerRadius="20dp" />


    </LinearLayout>
</layout>